// Copyright 2021 TsumiNa
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/yoshida-lab/avalon/protobuf/task";
package task;

import "google/protobuf/timestamp.proto";

service QueryTask {
  rpc GetTaskId(TaskRoot) returns (TaskId);
  rpc GetTask(TaskId) returns (Task);
}

message TaskRoot { string path = 1; }
message TaskId { uint32 id = 1; }

enum TaskState {
  INITIALIZED = 0;
  RUNNING = 1;
  TERMINATED = 2;
  ERROR = 3;
  DONE = 4;
}

message Task {
  uint32 id = 1;
  string task_root = 2;
  string name = 3;
  optional string description = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp finished_at = 6;

  TaskState state = 7;
}